@@ -264,6 +264,7 @@ public:
                         break;
                     }
                     case News::ItemType::Money:
+                    case News::ItemType::Campaign:
                         gfx_draw_sprite(&dpi, ImageId(SPR_FINANCE), screenCoords);
                         break;
                     case News::ItemType::Research:
